--- a/content/settings.json
+++ b/content/settings.json
@@ -1,34 +1,29 @@
 {
   "siteMetadata": {
     "language": "en",
-    "siteUrl": "https://gatsby-starter-portfolio-minimal-theme.netlify.app/",
-    "title": "Gatsby Starter for Portfolio Minimal",
-    "titleTemplate": "%s · Portfolio Minimal",
-    "description": "A Gatsby Starter Project to easily get started with Portfolio Minimal theme.",
-    "author": "Konstantin Münster",
-    "avatar": "../content/images/gatsby.png",
-    "bio": "This biography will be used in the footer area of an article and can contain some more details about the author.",
+    "siteUrl": "https://lpinventive.com",
+    "title": "Lpinventive Marketing Agency",
+    "titleTemplate": "%s · Lpinventive",
+    "description": "Lpinventive is a specialized marketing agency offering innovative advertising solutions on Meta and TikTok platforms.",
+    "author": "Luis Pacheco",
+    "avatar": "../content/images/luis-pacheco.png",
+    "bio": "Luis Pacheco is the mastermind behind Lpinventive, a marketing agency designed to propel your brand into the digital stratosphere.",
     "social": {
-      "behance": "https://behance.com",
-      "github": "https://github.com/konstantinmuenster",
-      "medium": "https://konstantinmuenster.medium.com",
-      "linkedin": "https://www.linkedin.com/in/konstantin-muenster/",
-      "mail": "mailto:mail@konstantin.digital"
+      "github": "https://github.com/lp-mkdir",
+      "linkedin": "https://www.linkedin.com/in/luis-eduardo-pacheco/",
+      "mail": "mailto:me@lpinventive.com"
     }
   },
   "siteConfiguration": {
-    "logo": { "text": "Portfolio" },
+    "logo": { "text": "Lpinventive" },
     "navigation": {
       "header": [
         { "label": "About", "url": "/#about" },
-        { "label": "Blog", "url": "/blog" },
-        { "label": "Features", "url": "/#features" },
         { "label": "Github", "url": "/#github" }
       ],
       "ctaButton": {
-        "openNewTab": true,
-        "label": "Resume",
-        "url": "/resume.pdf"
+        "label": "Contact",
+        "url": "/#github"
       },
       "footer": [
         { "label": "Privacy", "url": "/privacy" },
